--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -121,24 +121,23 @@
 	color: var(--clr-text--secondary);
 }
 
-.note[data-state="is-active"] {
-  background-color: var(--color-select);
-}
-
-
 
 @media only screen and (max-width: 900px) {
-  .note[data-state="is-active"] {
-    background-color: transparent;
-    border-bottom: 1px solid var(--color-border);
-  }
+	.sidebar.active {
+		grid-area: 1 / 1 / last-line / last-line;
+	}
 
-  .layout-content {
-    height: 100%;
-  }
+	.note[data-state="is-active"] {
+		background-color: transparent;
+		border-bottom: 1px solid var(--color-border);
+	}
 
-  .layout-sidebar[data-display="is-active"] ~ .layout-header,
-  .layout-sidebar[data-display="is-active"] ~ .layout-content {
-    display: none;
-  }
+	.layout-content {
+		height: 100%;
+	}
+
+	.layout-sidebar[data-display="is-active"] ~ .layout-header,
+	.layout-sidebar[data-display="is-active"] ~ .layout-content {
+		display: none;
+	}
 }
